<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">来电吧</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开可以刷新</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- splash activity -->
    <string name="splash_login">登录</string>
    <string name="splash_register">注册</string>

    <!-- login activity -->
    <string name="login_title">登录</string>
    <string name="login_mobile_tips">手机号码</string>
    <string name="login_password_tips">密码</string>

    <!-- register activity -->
    <string name="register_title">注册</string>
    <string name="register_fill_self_info">完善个人信息</string>
    <string name="register_code">验证码</string>
    <string name="login_and_register_register_code">获取验证码</string>
    <string name="login_and_register_login_code">重新获取</string>
    <string name="register_next">下一步</string>
    <string name="register_nickname">昵称(十个字以内)</string>
    <string name="register_age">年龄</string>
    <string name="register_resume">个人签名</string>
    <string name="register_in">进入来电吧</string>

    <!-- tong page activity -->
    <string name="tong_page_tab_str">首页</string>
    <string name="tong_page_title">首页</string>
    <string name="tong_page_borrow">借入</string>
    <string name="tong_page_return">转借</string>
    <string name="tong_page_lent">购买</string>
    <string name="tong_page_want_borrow">想借</string>
    <string name="tong_page_dialog_title">提示</string>
    <string name="tong_page_dialog_confirm">确认</string>
    <string name="tong_page_dialog_cancel">取消</string>
    <string name="tong_page_dialog_message">刷新历史列表确认是否归还成功</string>

    <!-- shop page activity -->
    <string name="shop_page_tab_str">店铺</string>
    <string name="shop_page_title">店铺</string>
    <string name="shop_page_detail">店铺详情</string>
    <string name="shop_page_no_more_data">暂时没有更多数据</string>
    <string name="shop_page_name">名称: %s</string>
    <string name="shop_page_tel">电话: %s</string>
    <string name="shop_page_address">地址: %s</string>

    <!-- history page activity -->
    <string name="history_page_tab_str">历史</string>
    <string name="history_page_title">历史</string>

    <!-- nearby page activity -->
    <string name="nearby_page_tab_str">附近</string>
    <string name="nearby_page_title">附近</string>

    <!-- self page activity -->
    <string name="self_page_tab_str">我</string>
    <string name="self_page_title">我</string>
    <string name="self_page_chat">聊天</string>
    <string name="self_page_friend">好友</string>
    <string name="self_page_want_info_push">想借推送</string>
    <string name="self_page_nearby_user">显示在附近的人</string>
    <string name="self_page_score_des">积分系统说明</string>
    <string name="self_page_about">关于</string>
    <string name="self_page_exit">退出登录</string>
    <string name="logout_dialog_title">提示</string>
    <string name="logout_dialog_content">确定退出来电吧吗？</string>
    <string name="logout_dialog_comfirm">确定</string>
    <string name="logout_dialog_cancel">取消</string>
    <string name="self_page_recharge">充值中心</string>
    <string name="self_page_mobile_history">移动电源历史</string>
    <string name="self_page_cash">提现</string>
    <string name="self_page_yue">余额: %s</string>
    <string name="self_page_edit_info">编辑个人信息</string>
    <string name="self_page_ya">押金: %s</string>

    <!-- lent activity -->
    <string name="lent_title">转借</string>

    <!-- userinfo activity -->
    <string name="user_info_title">详细资料</string>
    <string name="user_info_send_msg">发送消息</string>
    <string name="user_info_put_in_blacklist">列入黑名单</string>

    <!-- scan activity -->
    <string name="scan_title">二维码扫描</string>
    <string name="scan_result_title">扫描结果</string>

    <!-- borrow tips activity -->
    <!-- <string name="borrow_tips_title">借入(归还)</string> -->
    <string name="borrow_tips_title">结果</string>

    <!-- about page activity -->
    <string name="about_title">关于</string>
    <string name="about_content">深圳来电科技有限公司，研发的一款集智能硬件和软件相结合的产品，其硬件产品由充电柜，充电宝，结合软件APP，实现可随时随地租借归还充电宝，打开APP可搜索附近的充电柜，缴纳一定的保证金成为会员，即可实现免费租借充电宝的服务。实现环保、高效循环利用社会资源的高新科技企业。来电，为爱充电！让手机永不断电，是我们的使命与追求！</string>
    <string name="about_copyright">版权所有©深圳爱来科技有限公司2013-2014</string>
    <string name="about_company">深圳爱来电科技有限公司</string>
    <!-- score page activity -->
    <string name="score_page_title">积分系统说明</string>

    <!-- chat activity -->
    <string name="chat_title">聊天</string>

    <!-- friends activity -->
    <string name="friends_title">好友</string>

    <!-- recharge activity -->
    <string name="recharge_title">充值</string>
    <string name="recharge_count">充值金额:</string>
    <string name="recharge_yuan">元</string>
    <string name="recharge_way">支付方式: 支付宝</string>
    <string name="recharge_weixin">微信</string>
    <string name="recharge_alipay">支付宝</string>
    <string name="recharge_recharge">充值</string>
    <string name="recharge_tips">温馨提示：本充值成功后不能退款，充值人民币1元等于10个来电币，来电币可用于在指定终端上租借充电宝</string>
    <string name="recharge_empty_tips">请输入充值金额</string>

    <!-- edit info activity -->
    <string name="edit_info_title">修改个人信息</string>
    <string name="edit_info_done">保存</string>
    <string name="edit_info_name">昵称:</string>
    <string name="edit_info_age">年龄:</string>
    <string name="edit_info_resume">个人签名:</string>

    <!-- huanxin -->
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>

</resources>