<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_default_height"
        android:background="@color/activity_bar_bg" >

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="@dimen/activity_bar_btn_width"
            android:layout_height="@dimen/activity_bar_default_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/action_bar_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/about_title"
            android:textColor="@color/activity_bar_title_color"
            android:textSize="@dimen/activity_bar_title_size" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/about_page_divide_margin"
        android:src="@drawable/logo" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/activity_bar_title_size"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/about_page_content_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_page_content_margin"
        android:layout_marginRight="@dimen/about_page_content_margin"
        android:layout_marginTop="@dimen/about_page_divide_margin"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/about_content"
        android:textColor="#2b2b2b" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_page_content_margin"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/about_copyright" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_page_company_margin_top"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/about_company"
        android:textColor="@color/black" />

</LinearLayout>