<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_default_height"
        android:background="@color/activity_bar_bg" >

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="@dimen/activity_bar_btn_width"
            android:layout_height="@dimen/activity_bar_default_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/action_bar_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/activity_bar_title_color"
            android:textSize="@dimen/activity_bar_title_size" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/register_step1_opt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_mobile_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_mobile_tips"
            android:inputType="phone" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/register_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_and_register_margin_top"
                android:layout_marginLeft="@dimen/login_and_register_margin_left"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/login_and_register_margin_top"
                android:layout_weight="1.1"
                android:background="@drawable/username_and_password_et_bg"
                android:gravity="left|center_vertical"
                android:hint="@string/register_code"
                android:inputType="number"
                android:padding="@dimen/login_and_register_padding"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/register_get_code_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_and_register_margin_top"
                android:layout_marginRight="@dimen/login_and_register_margin_left"
                android:layout_marginTop="@dimen/login_and_register_margin_top"
                android:layout_weight="1"
                android:background="@drawable/login_and_register_btn_bg"
                android:gravity="center"
                android:paddingBottom="@dimen/login_and_register_padding"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="@dimen/login_and_register_padding"
                android:singleLine="true"
                android:text="@string/login_and_register_register_code"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
        
        <EditText
            android:id="@+id/register_password_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_tips"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/register_next_btn"
            style="@style/LoginAndRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_next" />
    </LinearLayout>

</LinearLayout>
