<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_default_height"
        android:background="@color/activity_bar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/register_fill_self_info"
            android:textColor="@color/activity_bar_title_color"
            android:textSize="@dimen/activity_bar_title_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_step1_opt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/register_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_and_register_margin_top"
            android:src="@drawable/male" />

        <EditText
            android:id="@+id/register_nickname_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_nickname"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/register_age_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_age"
            android:inputType="number"
            android:singleLine="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_and_register_margin_top"
            android:layout_marginLeft="@dimen/login_and_register_margin_left"
            android:layout_marginRight="@dimen/login_and_register_margin_left"
            android:layout_marginTop="@dimen/login_and_register_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/sex_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/male_btn_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/flag_gender_male"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="男"
                    android:textColor="#1176d8"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="1dp" />

            <LinearLayout
                android:id="@+id/sex_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sex_btn_normal_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/flag_gender_female"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="女"
                    android:textColor="#e53231"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/register_resume_et"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/login_and_register_margin_top"
            android:layout_marginLeft="@dimen/login_and_register_margin_left"
            android:layout_marginRight="@dimen/login_and_register_margin_left"
            android:layout_marginTop="@dimen/login_and_register_margin_top"
            android:background="@drawable/username_and_password_et_bg"
            android:gravity="top|left"
            android:hint="@string/register_resume"
            android:inputType="textMultiLine"
            android:padding="@dimen/login_and_register_padding"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_next_btn"
            style="@style/LoginAndRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_in" />
    </LinearLayout>

</LinearLayout>