<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_default_height"
        android:background="@color/activity_bar_bg" >

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="@dimen/activity_bar_btn_width"
            android:layout_height="@dimen/activity_bar_default_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/action_bar_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/activity_bar_title_color"
            android:textSize="@dimen/activity_bar_title_size" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_mobile_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_mobile_tips"
            android:inputType="phone" />

        <EditText
            android:id="@+id/login_password_et"
            style="@style/UserNameAndPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_tips"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_and_register_padding"
            android:layout_marginLeft="@dimen/login_and_register_margin_left"
            android:layout_marginTop="@dimen/login_and_register_margin_top"
            android:paddingBottom="@dimen/login_and_register_margin_top"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_btn"
            style="@style/LoginAndRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title" />
    </LinearLayout>

</LinearLayout>