<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_line_down_height"
                android:background="@color/header_line_down" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_line_up_height"
                android:background="@color/header_line_up" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <RadioGroup
                android:id="@+id/main_tab_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_alpha"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_join_event"
                    style="@style/main_tab_bottom"
                    android:background="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/main_tab_index_bg"
                    android:text="@string/tong_page_tab_str" />

                <RadioButton
                    android:id="@+id/radio_past_event"
                    style="@style/main_tab_bottom"
                    android:background="@null"
                    android:drawableTop="@drawable/main_tab_chat_bg"
                    android:text="@string/shop_page_tab_str" />

                <RadioButton
                    android:id="@+id/radio_event_type"
                    style="@style/main_tab_bottom"
                    android:background="@null"
                    android:drawableTop="@drawable/main_tab_create_event_bg"
                    android:text="@string/history_page_tab_str" />

                <RadioButton
                    android:id="@+id/radio_friends"
                    style="@style/main_tab_bottom"
                    android:background="@null"
                    android:drawableTop="@drawable/main_tab_friends_bg"
                    android:text="@string/nearby_page_tab_str" />

                <RadioButton
                    android:id="@+id/radio_more"
                    style="@style/main_tab_bottom"
                    android:background="@null"
                    android:drawableTop="@drawable/main_tab_more_bg"
                    android:text="@string/self_page_tab_str" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/main_tab_notify"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/main_tab_notify"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/main_tab_notify"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:id="@+id/main_tab_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/main_tab_notify" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:id="@+id/main_tab_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/main_tab_notify" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>