<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_default_height"
        android:background="@color/activity_bar_bg" >

        <LinearLayout
            android:id="@+id/back_btn"
            android:layout_width="@dimen/activity_bar_btn_width"
            android:layout_height="@dimen/activity_bar_default_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/action_bar_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/user_info_title"
            android:textColor="@color/activity_bar_title_color"
            android:textSize="@dimen/activity_bar_title_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_default_padding"
        android:layout_marginTop="@dimen/activity_default_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/activity_default_padding" >

        <com.mobilepower.tong.ui.view.CustomAvatarView
            android:id="@+id/user_info_avatar"
            android:layout_width="@dimen/self_page_avatar_size"
            android:layout_height="@dimen/self_page_avatar_size"
            android:layout_marginRight="@dimen/activity_default_padding" />

        <TextView
            android:id="@+id/user_info_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="KIN"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/self_page_nickname_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_resume_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="@dimen/user_des_min_height"
        android:orientation="vertical"
        android:padding="@dimen/activity_default_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="个性签名"
            android:textColor="@color/gray"
            android:textSize="@dimen/self_page_score_size" />

        <TextView
            android:id="@+id/user_info_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/self_page_score_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/send_msg_btn"
        style="@style/LoginAndRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/user_info_send_msg" />
    
    <TextView
        android:id="@+id/black_list_btn"
        style="@style/LoginAndRegisterBtn"
        android:background="@drawable/red_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/user_info_put_in_blacklist" />

</LinearLayout>